# gw2ws

./: CMakeLists.txt  README.md
gw2ws/: gw2ws.cpp  mongoose.c  mongoose.h
html/: index.html
